--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,26 @@ body {
     text-wrap: balance;
   }
 }
+
+.swiper{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  
+}
+
+.mySwiper .swiper-slide{
+  width: auto !important;
+  /* display:  flex;
+  height: 50%; */
+  /* margin: auto 0; */
+  padding: 4px;
+  padding-left: 16px;
+  padding-right: 16px;
+  user-select: none;
+  cursor: pointer;
+  border-radius: 8px;
+  margin-right:  30px;
+  font-size: 14px;
+}
